@@ -26,7 +26,7 @@
 
 require './config.php';
 
-require_once 'includes/functions/functions_edit.php';
+require_once './includes/functions/functions_edit.php';
 
 loadLangFile('pgv_confighelp');
 
@@ -229,7 +229,8 @@ if ($action=='createuser' || $action=='edituser2') {
 	}
 } else {
 	print_header($pgv_lang['user_admin']);
-	require 'js/autocomplete.js.htm';
+
+	if ($ENABLE_AUTOCOMPLETE) require './js/autocomplete.js.htm';
 }
 
 // Print the form to edit a user
